5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1664_2967.log
== TEST (2019-04-16 10:18:26) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))

if a,b>1.37:
	print("sim".upper())
	
else:
	print("nao".upper)
-- ERROR:
File "XXXX", line 4
    if a,b>1.37:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:55) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))

if (a,b>1.37):
	print("sim".upper())
	
else:
	print("nao".upper)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:19:10) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))

if (a,b>1.37):
	print("sim".upper())
	
else:
	print("nao".upper)
-- EXECUTION TIME:
0.14064
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
SIM
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
SIM
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:53) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))

m= 
if (a,b>1.37):
	print("Sim")
	print(a>b)
	
else:
	print("Nao")
	print()
-- ERROR:
File "XXXX", line 4
    m= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:55) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:18) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.222258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:20) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.151422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:20) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.177237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:21) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.205058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:21) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.207589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:21) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.288343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:22) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.2925
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1664/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:22) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.172007
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1664/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:22) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.241269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:22) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.352921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:22) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.379145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:23) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.588747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:38:23) 
-- CODE:
a = float(input("altura: "))
b = float(input("altura do parca: "))
c = float(input("mais alto: "))

if (a,b>1.37):
	print("Sim")
	print(c)
	
else:
	print("Nao")
	print(c)
-- EXECUTION TIME:
0.430388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 3, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
